# tradingtester

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  GETTING_STARTED.md  INSTALL.md  Makefile  PROJECT_SUMMARY.md  QUICK_START_WSL.md  README.md  RESUME_STATE.md  WSL_SETUP.md  demo.py  pyproject.toml  requirements.txt  setup.bat
.claude/skills/: codegen-all.md  codegen.md
backend/: __init__.py
backend/backtester/: __init__.py  engine.py
backend/cli/: __init__.py  main.py
backend/code_generator/: __init__.py  base_strategy.py  generator.py
backend/data/: __init__.py  binance_fetcher.py  fetcher.py
backend/llm/: __init__.py  client.py  prompts.py
backend/strategy_parser/: __init__.py  parser.py
hack/make/: validate.sh
reports/: .gitkeep
strategies/: .gitkeep  banker_ratchet.md  momentum_breakout.md  rsi_mean_reversion.md
